@@ -16,18 +16,15 @@ TITLE="Home of the LibTIFF software">http://www.remotesensing.org/libtiff/</A>
 http://libtiff.maptools.org/</A>
 <BR>
 
-<B>Latest Stable Release</B>: <A HREF="v3.6.1.html">v3.6.1</A><BR>
+<B>Latest Stable Release</B>: <A HREF="v3.7.0.html">v3.7.0</A><BR>
 
-<B>Latest Development Release</B>: <A HREF="v3.7.0beta2.html">v3.7.0beta2</A><BR>
+<B>Latest Development Release</B>: <A HREF="v3.7.0.html">v3.7.0</A><BR>
 
 <B>Master Download Site</B>: <A HREF="ftp://ftp.remotesensing.org/pub/libtiff">ftp.remotesensing.org</A> , directory pub/libtiff<BR>
 
 <B>Mirror Download Site</B>: <A HREF="http://libtiff.maptools.org/dl/">http://libtiff.maptools.org/dl/</A><BR>
 
 <B>Windows Binaries</B>: <A href="http://gnuwin32.sourceforge.net/packages/libtiff.htm">GnuWin32 Project</a><BR>
-
-<B>LZW Compression Kit:</B> <A
-HREF="ftp://ftp.remotesensing.org/libtiff/libtiff-lzw-compression-kit-1.5.tar.gz">libtiff-lzw-compression-kit-1.5.tar.gz</A><BR>
 
 <B>Mailing List</B>:
 <A href="mailto:tiff@remotesensing.org">tiff@remotesensing.org</A>,
@@ -93,7 +90,7 @@ and <a href="addingtags.html">Adding New Tags</a>
 <P>
 <HR>
 <em> 
-Last updated  $Date: 2004-10-02 13:54:51 $.
+Last updated  $Date: 2004-10-16 09:17:49 $.
 </em> 
 
 </BODY>
